# FinSight-AI

backend/: .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/agents/: react_agent.py
backend/app/agents/nodes/: answerer.py  router.py
backend/app/agents/state/: schemas.py
backend/app/agents/tools/: __init__.py  alpha_vantage_tool.py  finance_tool.py  news_tool.py  rag_tool.py  web_tool.py
backend/app/core/: config.py  database.py  email.py
backend/app/models/: __init__.py  db_models.py
backend/app/routers/: auth.py  documents.py  history.py
backend/app/services/: agent_service.py  auth_service.py  rag_service.py
backend/data/: finsight.db
backend/data/chroma/2309022f-f73e-4311-82a3-a22cd41f9ef5/: index_metadata.pickle
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/history/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/: ChatInterface.tsx  DocumentManager.tsx  FileUpload.tsx  Markdown.tsx  MultiFileUpload.tsx
frontend/src/lib/: api.ts  auth.ts  store.ts
